--- a/JobPost.html
+++ b/JobPost.html
@@ -42,7 +42,7 @@
                     </span><br>
                      <!--Work Experiance-->  
                     <div class="form-group"> 
-                        <label class="col-sm-4 textchange"  for="sel1">Work Experiance:</label>
+                        <label class="col-sm-4 textchange"  for="sel1"> Experiance:</label>
                             <div class="col-sm-8">
                                 <select class="form-control" name="sector" ng-model="Jobpost.Experiance" ng-dropdown required           title="Choose one of the following..." ng-change="selection()">
                                     <option value="" disabled="disabled" selected="selected">select</option>
