--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -2,7 +2,7 @@
 		<!-- start: page -->
 		<section class="body-sign" ng-controller="loginCntrl" ng-if=" memebers== false && session==''" ng-cloak>
 			<div class="center-sign">
-				<a href="/" class="logo text-center">
+				<a  class="logo text-center">
                      <div style="color:red;text-align:center" ng-if=" status !=''">{{message}}</div>
                      <div style="color:green;text-align:center" ng-if=" status ==''">{{message}}</div>
 					<h2 class="text-bold">Inspiring wings</h2>
