--- a/Pages/ForgotPassword.html
+++ b/Pages/ForgotPassword.html
@@ -1,7 +1,7 @@
 <section class="body-sign" ng-controller="forgotpassCntrl" ng-if=" memebers== false ">
 			<div class="center-sign">
 				<a href="/" class="logo text-center">
-					
+
 					<h2 class="text-bold">Inspiring wings</h2>
 				</a>
 				<div class="panel panel-sign">
@@ -12,21 +12,21 @@
 						<div class="alert alert-info">
 							<p class="m-none text-semibold h6">Enter your e-mail below and we will send you reset instructions!</p>
 						</div>
-						<form  id="form" method="POST" name="forgotpassword" class="form-horizontal" enctype="multipart/form-data" ng-submit="onSubmit();">
+						<form  id="form" method="POST" name="forgotpassword" class="form-horizontal" enctype="multipart/form-data" ng-submit="onSubmit(forgotdata);">
 							<div class="form-group mb-none" ng-class="{'has-error' : forgotpassword.email.$invalid && !forgotpassword.email.$pristine}">
 								<div class="input-group">
-									<input name="email" type="email" placeholder="E-mail" class="form-control input-lg" ng-pattern="/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/" ng-model="forgotdata.email" required/>
-                                 
+									<input name="email" type="email" placeholder="E-mail" class="form-control input-lg" ng-pattern="/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/" ng-model="forgotdata.email_id" required/>
+
 									<span class="input-group-btn">
 										<button class="btn btn-primary btn-lg" ng-disabled="forgotpassword.$invalid" type="submit">Reset!</button>
 									</span>
 								</div>
                                    <span ng-show="forgotpassword.email.$invalid && !forgotpassword.email.$pristine" style="color:red">
                                     <span style="color:red;" ng-show="forgotpassword.email.$error.required">Email is required.</span>
-                                        <span ng-show="forgotpassword.email.$error.pattern">Enter Exact EmailId</span>
+                                        <span ng-show="forgotpassword.email.$error.pattern">Enter Valid EmailId</span>
                                 </span>
 							</div>
-
+              <div style="color:green;text-align:center;margin-top:10px" ng-if=" status !=''">{{message}}</div>
 							<p class="text-center mt-lg">Remembered? <a ng-click="login()">Sign In!</a></p>
 							 <p class="text-center"><a ng-click="homepage()"><i class="fa fa-arrow-left mr-xs"></i> Back to Home</a></p>
 						</form>
