--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -1,4 +1,4 @@
-<section class="body-sign" ng-controller="signUp" ng-if=" memebers== false && session ==''" >
+<section class="body-sign" ng-controller="signUp" ng-if=" memebers== false && session ==''" ng-cloak>
   <div class="center-sign"> <a ng-click="homepage()" class="logo text-center">
        <div style="color:red;text-align:center" ng-if=" status ==''">{{message}}</div>
                      <div style="color:green;text-align:center" ng-if=" status !=''">{{message}}</div>
