--- a/Pages/header.html
+++ b/Pages/header.html
@@ -43,7 +43,7 @@
   <div class="container position-relative">
     <div class="row">
       <div class="logo-wraper col-sm-12">
-        <div class="pull-left"> <img src="Assets/images/logo.png" onclick="window.top.location.href='index.aspx'" alt="logo" style="opacity:0.4;"></div>
+        <div class="pull-left"> <img src="assets/images/logo.png" onclick="window.top.location.href='index.aspx'" alt="logo" style="opacity:0.4;"></div>
         <div class="pull-right mob-no"><font> <i class="fa fa-phone-square"></i>+91 99999 99999</font></div>
       </div>
     </div>
@@ -61,7 +61,7 @@
         <li data-target="#main-slider" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item active"> <img src="Assets/images/slider/bg1.jpg" />
+        <div class="item active"> <img src="assets/images/slider/bg1.jpg" />
           <div class="container">
             <div class="carousel-caption">
               <h1>Avul Pakir Jainulabdeen Abdul Kalam</h1>
@@ -69,11 +69,11 @@
               <p><a class="btn btn-lg btn-primary" href="#" role="button">@*Read More*@</a></p>
             </div>
             <div class="col-sm-6 hidden-xs animation animated-item-4">
-              <div class="slider-img" style="height: 250px;"> <img src="Assets/images/slider/img1.png" class="img-responsive"> </div>
+              <div class="slider-img" style="height: 250px;"> <img src="assets/images/slider/img1.png" class="img-responsive"> </div>
             </div>
           </div>
         </div>
-        <div class="item"> <img src="Assets/images/slider/bg2.jpg">
+        <div class="item"> <img src="assets/images/slider/bg2.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Mother Teresa </h1>
@@ -81,11 +81,11 @@
               <p><a class="btn btn-lg btn-primary" href="#" role="button">@*Read More*@</a></p>
             </div>
             <div class="col-sm-6 hidden-xs animation animated-item-4">
-              <div class="slider-img" style="height: 250px;"> <img src="Assets/images/slider/img2.png" class="img-responsive"> </div>
+              <div class="slider-img" style="height: 250px;"> <img src="assets/images/slider/img2.png" class="img-responsive"> </div>
             </div>
           </div>
         </div>
-        <div class="item"> <img src="Assets/images/slider/bg3.jpg">
+        <div class="item"> <img src="assets/images/slider/bg3.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Allah-Rakha Rahman</h1>
@@ -93,7 +93,7 @@
               <p><a class="btn btn-lg btn-primary" href="#" role="button">@*Read More*@</a></p>
             </div>
             <div class="col-sm-6 hidden-xs animation animated-item-4">
-              <div class="slider-img" style="height: 250px;"> <img src="Assets/images/slider/img3.png" class="img-responsive"> </div>
+              <div class="slider-img" style="height: 250px;"> <img src="assets/images/slider/img3.png" class="img-responsive"> </div>
             </div>
           </div>
         </div>
