--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -1,10 +1,9 @@
 
 		<!-- start: page -->
-		<section class="body-sign" ng-controller="loginCntrl" ng-if=" memebers== false && session==''" ng-cloak>
+		<section class="body-sign"  ng-cloak ng-controller="loginCntrl" ng-if=" memebers== false && session==''" >
 			<div class="center-sign">
 				<a  class="logo text-center">
-                     <div style="color:red;text-align:center" ng-if=" status !=''">{{message}}</div>
-                     <div style="color:green;text-align:center" ng-if=" status ==''">{{message}}</div>
+					<div ng-if=" status =='' " class="alert alert-danger" role="alert" >{{message}}</div>
 					<h2 class="text-bold">Inspiring wings</h2>
 				</a>
 
@@ -17,7 +16,7 @@
 							<div class="form-group mb-lg" ng-class="{'has-error' : registrationForm.email.$invalid && !registrationForm.email.$pristine}">
 								<label>Email</label>
 								<div class="input-group input-group-icon">
-									<input ng-model="data.email_id" name="email" type="email"  ng-required="true"  class="form-control input-lg" required />
+									<input ng-model="data.email_id" name="email"  ng-required="true"  class="form-control input-lg" required />
 									<span class="input-group-addon">
 										<span class="icon icon-lg">
 											<i class="fa fa-user"></i>
@@ -27,7 +26,7 @@
 								<span ng-show="registrationForm.email.$invalid && !registrationForm.email.$pristine" style="color:red">
                                     <span style="color:red;" ng-show=" registrationForm.email.$error.required">Email is required.</span>
                                 </span>
-                               
+
 							</div>
 							<div class="form-group mb-lg" ng-class="{'has-error' : registrationForm.password.$invalid && !registrationForm.password.$pristine}">
 								<div class="clearfix">
