--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Inspiring Wings</title>
- <base href="vinodangular/" />
+ <base href="/vinodangular/" />
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="assets/css/main.css" ng-if=" memebers== true && session == '' " rel="stylesheet">
