--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="InspiringWings" ng-cloak>
+<html ng-app="InspiringWings1" ng-cloak>
 <head>
 <meta charset="utf-8">
 <title>Inspiring Wings</title>
