--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </div>
 
-  <!-- Carouselvcchvnvghgvhvhgfgfggfggfgfgfg
+  <!-- Carousel
     ================================================== -->
 
   <div id="main-slider" class="carousel item" data-ride="carousel" ng-if=" memebers== true && session ==''">
